...
    
    private lazy var logoutButton: UIButton = {
        let button = UIButton()
        button.setImage(UIImage(named: "exit_image"), for: .normal)
        button.addTarget(self, action: #selector(didTapExitButton), for: .touchUpInside)
        button.tintColor = .ypRed
        button.accessibilityIdentifier = "Logout button"
        return button
    }()
    
    private let userPick: UIImageView = {
        let userImage = UIImage(named: "avatar_placeholder")
        let image = UIImageView(image: userImage)
...
    
    func showExitAlert() {
        let alertModel = AlertModel(
            title: "Пока, пока!",
            message: "Уверены, что хотите выйти?",
            buttonText: "Нет",
            secondButtonText: "Да",
            completion: nil) { [weak self] in
                guard let self else { return }
                self.presenter?.logout()
                switchToSplashController()
            }
        alertPresenter?.present(alert: alertModel)
...
