...
        return imageView
    }()
    
    lazy var favoriteImageButton: UIButton = {
        let button = UIButton()
        button.addTarget(self, action: #selector(didTapFavoriteButton), for: .touchUpInside)
        button.accessibilityIdentifier = "Like button"
        return button
    }()
    
    lazy var dateLabel: UILabel = {
        let label = UILabel()
        label.font = UIFont.systemFont(ofSize: 13, weight: .regular)
...
